--- a/src/components/pages/widgets/media-player/widget/components/cards/media/style.module.scss
+++ b/src/components/pages/widgets/media-player/widget/components/cards/media/style.module.scss
@@ -6,6 +6,7 @@
   min-width: 150px;
   min-height: 200px;
   max-width: 250px;
+  max-height: 250px;
   overflow: hidden;
   box-sizing: border-box;
   display: flex;
@@ -41,8 +42,7 @@
     }
 
     img {
-      width: 100%;
-      height: 100%;
+      margin: auto 0;
       object-fit: cover;
       border-radius: 4px;
     }
